Fix z-index of transport controls box Issue happens at least in Chrome 65

Conflicts:
	html/css/less/main.less
	html/css/main.css

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -701,6 +701,7 @@ header#pedalboard-actions {
   left: initial;
   background: rgba(17, 17, 17, 0.9);
   padding: 50px 40px 15px 40px;
+  z-index: 999;
   .mod-midi-icon {
     width: auto !important;
     padding-left: 25px;
